# server

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  http_types.c  http_types.h  main.c  request.c  request.h  response.c  response.h  server.c  server.h  winsock.c
content/: index.html
